--- a/Api-movies/package.json
+++ b/Api-movies/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0",
+    "mangodb": "^1.0.0",
+    "mongodb": "^6.19.0",
     "mongoose": "^8.18.0",
     "nodemon": "^3.1.10"
   },
