--- a/05-autenticacao-com-jsonwebtoken/package.json
+++ b/05-autenticacao-com-jsonwebtoken/package.json
@@ -11,6 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "dcrypt": "^0.0.2",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.19.0",
